public/assets/css/app-colors.css
/* ... */
.btn-royal-blue:hover {
  background-color: var(--color-royal-blue) !important;
  color: var(--color-white-light) !important;
  border: 1px solid var(--color-royal-blue);
}
.btn-royal-blue:focus {
  background-color: var(--color-white-light) !important;
  color: var(--color-royal-blue) !important;
  border: 1px solid var(--color-royal-blue);
}

/* --color-sky-blue */
.text-sky-blue {
  color: var(--color-sky-blue) !important;
}
.bg-sky-blue {
  background-color: var(--color-sky-blue) !important;
}
.border-sky-blue {
  border: 1px solid var(--color-sky-blue) !important;
}

.btn-sky-blue {
  background-color: var(--color-sky-blue) !important;
  color: var(--color-white-light) !important;
}
.btn-sky-blue:hover {
  background-color: var(--color-sky-blue) !important;
  color: var(--color-white-light) !important;
  border: 1px solid var(--color-sky-blue);
}
.btn-sky-blue:focus {
  background-color: var(--color-white-light) !important;
  color: var(--color-sky-blue) !important;
  border: 1px solid var(--color-sky-blue);
}

/* --color-electric-blue */
.text-electric-blue {
  color: var(--color-electric-blue) !important;
}
.bg-electric-blue {
  background-color: var(--color-electric-blue);
}
.border-electric-blue,
.border-electric-blue:focus,
.border-electric-blue:hover {
  border: 1px solid var(--color-electric-blue);
}

.btn-electrue-blue-outline {
  border: 1px solid var(--color-electric-blue);
  color: var(--color-electric-blue) !important;
}
.btn-electrue-blue-outline:hover {
  background-color: var(--color-electric-blue);
  border: 1px solid var(--color-electric-blue);
  color: var(--color-white-light) !important;
}
.btn-electrue-blue-outline:focus {
  color: var(--color-white-light) !important;
  background-color: var(--color-electric-blue) !important;
}

/*=============================================
=        Global & Reset Styles                =
=============================================*/
body,
a {
  font-weight: normal;
}

* {
  scrollbar-width: thin;
}

#user-image {
  object-fit: cover;
}

a:hover {
  color: var(--color-info) !important;
}
a:focus {
  color: var(--color-info) !important;
}

a.text-white,
a.text-white:hover {
  color: var(--color-white-light) !important;
}

a.header-link:hover {
  color: var(--color-blue-light) !important;
}

a.text-gray {
  color: var(--color-gray-dark) !important;
}
*.text-excess {
  color: var(--color-excess-text) !important;
}

/*=============================================
=        Typography                         =
=============================================*/
/* .page-title {
  line-height: 2.3 !important;
} */

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--color-gray-dark) !important;
  font-weight: bold;
}

h1 > *,
h2 > *,
h3 > *,
h4 > *,
h5 > *,
h6 > * {
  /* Estilos para hijos de h (si es necesario) */
}

label {
  color: var(--color-gray-dark) !important;
  font-weight: bold;
}

/*=============================================
=        Forms & Inputs                     =
=============================================*/
.form-select option:checked {
  background: #2f54a2;
  color: var(--color-white-light);
}

.form-check-input:checked {
  background-color: var(--color-primary-dark);
  border-color: var(--color-primary-dark);
}

input.is-invalid {
  border-color: #dc3545 !important; /* rojo */
}
input.is-valid {
  border-color: #28a745 !important; /* verde */
}

/* 3.2 Validación de Formularios */
.form-control.error,
.form-select.error,
.form-control.error:hover,
.form-select.error:hover {
  border-color: #e74c3c; /* Rojo */
}

.error-message {
  color: #e74c3c; /* Rojo */
  font-size: 0.9em;
  margin-top: 5px;
  min-height: 1em;
}

input[type='checkbox']:checked {
  background-color: var(--color-primary-dark);
  border-color: var(--color-primary-dark);
  accent-color: var(--color-primary-dark);
}

input.is-invalid,
select.is-invalid,
textarea.is-invalid {
  border-color: #dc3545 !important;
}
.validation-message {
  color: red;
  font-size: 0.95em;
  margin-top: 4px;
}

/* Estilo para el pulgar en navegadores Webkit/Blink */
input[type='range']::-webkit-slider-thumb {
  background: var(--color-primary); /* Color del pulgar */
  /* Otros estilos como height, width, border-radius */
  -webkit-appearance: none; /* Necesario para personalizar el pulgar */
}

/* Estilo para el pulgar en Firefox */
input[type='range']::-moz-range-thumb {
  background: var(--color-primary); /* Color del pulgar */
}

/*=============================================
=        Plugin Styles: Select2             =
=============================================*/
.select2-container--default
  .select2-selection--multiple
  .select2-selection__choice {
  background-color: var(--color-secondary) !important;
  border: none;
  color: var(--color-white-light);
  padding: 2px 5px;
  margin-top: 4px;
}

.select2-selection__choice__remove {
  color: var(--color-white-light) !important;
  margin-right: 5px;
}
.select2-selection__choice__remove:hover {
  color: var(--color-white-light) !important;
  background-color: #0072b8 !important;
  text-decoration: none;
  cursor: pointer;
}

/* select2 */
.select2-results__options {
  max-height: 250px; /* Puedes ajustar esta altura a tu gusto */
  overflow-y: auto;
}

/* Contenedor principal de cada opción/selección */
.country-option-container {
  display: flex; /* Para alinear el sufijo y los detalles uno al lado del otro */
  align-items: center; /* Centrar verticalmente */
  padding: 4px 0; /* Espaciado interno */
  box-sizing: border-box; /* Incluir padding en el ancho/alto */
}

/* Estilo para el sufijo (ej. VE) */
.country-sufijo {
  font-weight: normal;
  font-size: 1.2em; /* Hazlo un poco más grande */
  margin-right: 10px; /* Espacio entre el sufijo y el prefijo/nombre */
  padding: 3px 6px; /* Espaciado dentro del borde */
  min-width: 40px; /* Ancho mínimo para mantener uniformidad */
  text-align: center;
  line-height: 1; /* Ajustar línea para que se centre mejor verticalmente */
}
/* ... */

